fix : checking cards spacing

--- a/style.scss
+++ b/style.scss
@@ -609,15 +609,21 @@ footer {
     display: none;
   }
   .container{
-    height: 90vh;
+    height: 50vh;
+    margin: 3.125rem 0 0 0;
   }
 
   .masthead-gradient{
-    height: calc(10.625% - 29px);
+    height: calc(1.625% - 29px);
   }
 
   .slide {
-    height: 90vh;
+    height: 50vh;
+
+    img{
+      height: 50vh;
+      object-fit: cover;
+    }
   }
 
   .movie-details {
@@ -626,7 +632,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    height: 85vh;
+    height: 50vh;
     width: 100%;
   }
 
@@ -652,7 +658,18 @@ footer {
   }
 
   .content {
-    padding-left: 50px;
+    padding-left: 40px;
+  }
+
+  .card {
+    margin-right: 0px;
+    padding: 10px 10px 10px 5px;
+    img{
+      transition: none;
+    }
+    img:hover{
+        transform: none;
+    }
   }
 
   .featuring-container {
